Replace Joyride tour system with driver.js

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -1,4 +1,3 @@
-
 {
     "login": {
         "welcome": "أهلاً بك في",
@@ -122,7 +121,8 @@
         "contacts": "جهات الاتصال",
         "tasks": "المهام",
         "approvals": "عمليات الموافقة",
-        "adminPanel": "لوحة الإدارة"
+        "adminPanel": "لوحة الإدارة",
+        "helpCenter": "مركز المساعدة"
     },
     "calendar": {
         "today": "اليوم",
@@ -327,7 +327,13 @@
         "prompt1": "لخص جدول الأسبوع القادم.",
         "prompt2": "هل هناك أي مهام ذات أولوية عالية تستحق قريباً؟",
         "prompt3": "اذكر جميع جهات الاتصال من ألمانيا.",
-        "prompt4": "ما هي أكبر التحديات التي نواجهها؟"
+        "prompt4": "ما هي أكبر التحديات التي نواجهها؟",
+        "helpSuggestions": {
+            "title": "مقالات مساعدة مقترحة",
+            "subtitle": "بدعم من مركز المساعدة",
+            "open": "فتح في مركز المساعدة",
+            "relevance": "درجة الملاءمة: {score}"
+        }
     },
     "footer": {
         "links": "روابط",
@@ -409,5 +415,57 @@
         "lightMode": "وضع الإضاءة",
         "darkMode": "الوضع الداكن",
         "backToDashboard": "العودة إلى لوحة التحكم"
+    },
+    "help": {
+        "hero": {
+            "badge": "قاعدة المعرفة",
+            "title": "كيف يمكننا مساعدتك اليوم؟",
+            "subtitle": "ابحث عن المقالات، استكشف الجولات الإرشادية واحصل على توصيات سياقية تناسب دورك.",
+            "startTour": "بدء الجولة الإرشادية",
+            "tourHint": "تتكيف الجولات مع صلاحياتك بحيث ترى النصائح ذات الصلة فقط."
+        },
+        "search": {
+            "label": "البحث في مركز المساعدة",
+            "placeholder": "ابحث في المقالات مثل: onboarding، analytics…"
+        },
+        "categories": {
+            "all": "جميع المواضيع"
+        },
+        "results": {
+            "title": "نتائج البحث",
+            "count": "{count} نتيجة",
+            "empty": "لم يتم العثور على مقالات. جرّب كلمات مفتاحية أخرى أو غيّر الفئة."
+        },
+        "suggested": {
+            "title": "مقالات مقترحة",
+            "count": "{count} توصية"
+        },
+        "article": {
+            "readTime": "{minutes} دقيقة قراءة",
+            "relevance": "درجة الملاءمة: {score}",
+            "open": "فتح المقال"
+        },
+        "sidebar": {
+            "faqTitle": "الأسئلة الشائعة",
+            "noFaqs": "لا توجد أسئلة لهذه الفئة بعد."
+        },
+        "feedback": {
+            "title": "شاركنا ملاحظاتك",
+            "subtitle": "أخبرنا ما إذا كان المحتوى مفيدًا لنحسّن التوصيات.",
+            "articleLabel": "المقال",
+            "articlePlaceholder": "اختر مقالًا (اختياري)",
+            "sentimentLabel": "ما مدى فائدته؟",
+            "sentiments": {
+                "positive": "مفيد جدًا",
+                "neutral": "مفيد إلى حد ما",
+                "negative": "يحتاج إلى تحسين"
+            },
+            "commentLabel": "ملاحظات إضافية",
+            "commentPlaceholder": "أخبرنا ما الذي كنت تتوقعه…",
+            "supportHint": "تحتاج إلى مساعدة إضافية؟ تواصل مع المساعد.",
+            "reset": "إعادة تعيين",
+            "submit": "إرسال الملاحظات",
+            "thankYou": "شكرًا لملاحظاتك! سنستخدمها لتحسين الإجابات."
+        }
     }
 }
