--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -1,4 +1,3 @@
-
 {
     "login": {
         "welcome": "Добро пожаловать в",
@@ -122,7 +121,8 @@
         "contacts": "Контакты",
         "tasks": "Задачи",
         "approvals": "Согласования",
-        "adminPanel": "Панель администратора"
+        "adminPanel": "Панель администратора",
+        "helpCenter": "Центр помощи"
     },
     "calendar": {
         "today": "Сегодня",
@@ -327,7 +327,13 @@
         "prompt1": "Сводка расписания на следующую неделю.",
         "prompt2": "Есть ли задачи с высоким приоритетом, которые скоро нужно выполнить?",
         "prompt3": "Перечислить все контакты из Германии.",
-        "prompt4": "Каковы наши самые большие проблемы?"
+        "prompt4": "Каковы наши самые большие проблемы?",
+        "helpSuggestions": {
+            "title": "Рекомендованные статьи",
+            "subtitle": "Работает на базе центра помощи",
+            "open": "Открыть в центре помощи",
+            "relevance": "Оценка релевантности: {score}"
+        }
     },
     "footer": {
         "links": "Ссылки",
@@ -409,5 +415,57 @@
         "lightMode": "Светлая тема",
         "darkMode": "Тёмная тема",
         "backToDashboard": "Вернуться к панели"
+    },
+    "help": {
+        "hero": {
+            "badge": "База знаний",
+            "title": "Чем мы можем помочь сегодня?",
+            "subtitle": "Ищите статьи, проходите интерактивные туры и получайте рекомендации с учётом вашей роли.",
+            "startTour": "Начать тур",
+            "tourHint": "Туры адаптируются под ваши права доступа и показывают только полезные советы."
+        },
+        "search": {
+            "label": "Поиск по центру помощи",
+            "placeholder": "Введите запрос, например onboarding, analytics…"
+        },
+        "categories": {
+            "all": "Все темы"
+        },
+        "results": {
+            "title": "Результаты поиска",
+            "count": "{count} совпадений",
+            "empty": "Ничего не найдено. Попробуйте другие ключевые слова или смените категорию."
+        },
+        "suggested": {
+            "title": "Рекомендуемые статьи",
+            "count": "{count} рекомендаций"
+        },
+        "article": {
+            "readTime": "{minutes} мин. чтения",
+            "relevance": "Релевантность: {score}",
+            "open": "Открыть статью"
+        },
+        "sidebar": {
+            "faqTitle": "Популярные вопросы",
+            "noFaqs": "Для этой категории пока нет вопросов."
+        },
+        "feedback": {
+            "title": "Поделитесь отзывом",
+            "subtitle": "Расскажите, помогла ли статья, чтобы мы улучшили рекомендации.",
+            "articleLabel": "Статья",
+            "articlePlaceholder": "Выберите статью (необязательно)",
+            "sentimentLabel": "Насколько это было полезно?",
+            "sentiments": {
+                "positive": "Очень полезно",
+                "neutral": "Отчасти полезно",
+                "negative": "Нужно доработать"
+            },
+            "commentLabel": "Комментарий",
+            "commentPlaceholder": "Опишите, что вы ожидали увидеть…",
+            "supportHint": "Нужна помощь? Напишите ассистенту.",
+            "reset": "Сбросить",
+            "submit": "Отправить отзыв",
+            "thankYou": "Спасибо за отзыв! Мы используем его для улучшения ответов."
+        }
     }
 }
