fix: inline jwt helper to remove external dependency

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -333,6 +333,14 @@
             "subtitle": "بدعم من مركز المساعدة",
             "open": "فتح في مركز المساعدة",
             "relevance": "درجة الملاءمة: {score}"
+        },
+        "fallback": {
+            "generic": "عذرًا، حدث خطأ ما. يرجى المحاولة مرة أخرى بعد قليل.",
+            "apiDown": "خدمتنا الذكية تواجه مشكلة الآن. حاول مرة أخرى بعد بضع دقائق.",
+            "limitReached": "لقد استهلكنا الحصة المخصصة لهذا الشهر. حاول مجددًا بعد إعادة التعيين.",
+            "unavailable": "مساعد الذكاء الاصطناعي غير متوفر بعد لأنه لم يتم إعداده.",
+            "retryAfter": "يرجى المحاولة مجددًا {relativeTime}.",
+            "dismiss": "إخفاء هذه الرسالة"
         }
     },
     "footer": {
