--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -333,6 +333,14 @@
             "subtitle": "Работает на базе центра помощи",
             "open": "Открыть в центре помощи",
             "relevance": "Оценка релевантности: {score}"
+        },
+        "fallback": {
+            "generic": "Извините, произошла ошибка. Пожалуйста, попробуйте снова чуть позже.",
+            "apiDown": "Наш сервис ИИ сейчас недоступен. Попробуйте ещё раз через несколько минут.",
+            "limitReached": "Лимит использования на этот месяц исчерпан. Попробуйте позже, когда квота обновится.",
+            "unavailable": "ИИ-ассистент пока недоступен, потому что не настроен.",
+            "retryAfter": "Повторите попытку {relativeTime}.",
+            "dismiss": "Скрыть сообщение"
         }
     },
     "footer": {
