--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -333,6 +333,14 @@
             "subtitle": "Yardım merkezi tarafından desteklenir",
             "open": "Yardım merkezinde aç",
             "relevance": "Alaka puanı: {score}"
+        },
+        "fallback": {
+            "generic": "Üzgünüm, bir sorun oluştu. Lütfen kısa süre sonra tekrar dener misin?",
+            "apiDown": "Yapay zekâ servisimiz şu anda sorun yaşıyor. Birkaç dakika sonra tekrar dener misin?",
+            "limitReached": "Bu ayki kullanım kotamız doldu. Kota yenilendiğinde lütfen tekrar dene.",
+            "unavailable": "Yapay zekâ asistanı henüz yapılandırılmadığı için kullanılamıyor.",
+            "retryAfter": "Lütfen {relativeTime} tekrar dene.",
+            "dismiss": "Mesajı gizle"
         }
     },
     "footer": {
