--- a/public/i18n/translations/ar.json
+++ b/public/i18n/translations/ar.json
@@ -383,7 +383,21 @@
         "prompt1": "لخص جدول الأسبوع القادم.",
         "prompt2": "هل هناك أي مهام ذات أولوية عالية تستحق قريباً؟",
         "prompt3": "اذكر جميع جهات الاتصال من ألمانيا.",
-        "prompt4": "ما هي أكبر التحديات التي نواجهها؟"
+        "prompt4": "ما هي أكبر التحديات التي نواجهها؟",
+        "helpSuggestions": {
+            "title": "مقالات مساعدة مقترحة",
+            "subtitle": "بدعم من مركز المساعدة",
+            "open": "فتح في مركز المساعدة",
+            "relevance": "درجة الملاءمة: {score}"
+        },
+        "fallback": {
+            "generic": "عذرًا، حدث خطأ ما. يرجى المحاولة مرة أخرى بعد قليل.",
+            "apiDown": "خدمتنا الذكية تواجه مشكلة الآن. حاول مرة أخرى بعد بضع دقائق.",
+            "limitReached": "لقد استهلكنا الحصة المخصصة لهذا الشهر. حاول مجددًا بعد إعادة التعيين.",
+            "unavailable": "مساعد الذكاء الاصطناعي غير متوفر بعد لأنه لم يتم إعداده.",
+            "retryAfter": "يرجى المحاولة مجددًا {relativeTime}.",
+            "dismiss": "إخفاء هذه الرسالة"
+        }
     },
     "footer": {
         "links": "روابط",
