--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -333,6 +333,14 @@
             "subtitle": "Bereitgestellt vom Help Center",
             "open": "Im Help Center öffnen",
             "relevance": "Relevanzwert: {score}"
+        },
+        "fallback": {
+            "generic": "Entschuldigung, es ist ein Fehler aufgetreten. Bitte versuche es später erneut.",
+            "apiDown": "Unser KI-Dienst hat gerade Schwierigkeiten. Bitte versuche es in ein paar Minuten erneut.",
+            "limitReached": "Das Nutzungskontingent für diesen Monat ist ausgeschöpft. Bitte versuche es nach der Zurücksetzung erneut.",
+            "unavailable": "Der KI-Assistent ist noch nicht konfiguriert und steht daher nicht zur Verfügung.",
+            "retryAfter": "Bitte versuche es {relativeTime} erneut.",
+            "dismiss": "Nachricht ausblenden"
         }
     },
     "footer": {
