--- a/public/i18n/translations/ru.json
+++ b/public/i18n/translations/ru.json
@@ -383,7 +383,21 @@
         "prompt1": "Сводка расписания на следующую неделю.",
         "prompt2": "Есть ли задачи с высоким приоритетом, которые скоро нужно выполнить?",
         "prompt3": "Перечислить все контакты из Германии.",
-        "prompt4": "Каковы наши самые большие проблемы?"
+        "prompt4": "Каковы наши самые большие проблемы?",
+        "helpSuggestions": {
+            "title": "Рекомендованные статьи",
+            "subtitle": "Работает на базе центра помощи",
+            "open": "Открыть в центре помощи",
+            "relevance": "Оценка релевантности: {score}"
+        },
+        "fallback": {
+            "generic": "Извините, произошла ошибка. Пожалуйста, попробуйте снова чуть позже.",
+            "apiDown": "Наш сервис ИИ сейчас недоступен. Попробуйте ещё раз через несколько минут.",
+            "limitReached": "Лимит использования на этот месяц исчерпан. Попробуйте позже, когда квота обновится.",
+            "unavailable": "ИИ-ассистент пока недоступен, потому что не настроен.",
+            "retryAfter": "Повторите попытку {relativeTime}.",
+            "dismiss": "Скрыть сообщение"
+        }
     },
     "footer": {
         "links": "Ссылки",
