Add segment intelligence dashboards and exports

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -122,7 +122,8 @@
         "tasks": "المهام",
         "approvals": "عمليات الموافقة",
         "adminPanel": "لوحة الإدارة",
-        "helpCenter": "مركز المساعدة"
+        "helpCenter": "مركز المساعدة",
+        "segments": "القطاعات"
     },
     "calendar": {
         "today": "اليوم",
@@ -205,7 +206,19 @@
         "country": "الدولة",
         "city": "المدينة",
         "phone": "الهاتف",
-        "address": "العنوان"
+        "address": "العنوان",
+        "sector": "القطاع",
+        "revenueContribution": "مساهمة الإيرادات",
+        "touchFrequency": "وتيرة التواصل",
+        "segments": "القطاعات",
+        "touchFrequencyOptions": {
+            "daily": "يومي",
+            "weekly": "أسبوعي",
+            "biweekly": "كل أسبوعين",
+            "monthly": "شهري",
+            "quarterly": "ربع سنوي",
+            "adHoc": "حسب الحاجة"
+        }
     },
     "tasks": {
         "newTask": "مهمة جديدة",
@@ -474,6 +487,46 @@
             "reset": "إعادة تعيين",
             "submit": "إرسال الملاحظات",
             "thankYou": "شكرًا لملاحظاتك! سنستخدمها لتحسين الإجابات."
+        }
+    },
+    "common": {
+        "notAvailable": "غير متاح"
+    },
+    "segments": {
+        "tabLabel": "ذكاء القطاعات",
+        "overviewSubtitle": "تابع صحة القطاعات والعلاقات وفرص الحملات.",
+        "selectPlaceholder": "اختر قطاعًا",
+        "performanceTitle": "ملخص أداء القطاعات",
+        "performanceSubtitle": "راقب المساهمة والتفاعل وسرعة النمو.",
+        "members": "{count} جهة",
+        "revenueContribution": "مساهمة الإيرادات",
+        "engagement": "درجة التفاعل",
+        "expansion": "إمكانية التوسع",
+        "expectedGrowth": "نمو الإيرادات",
+        "drilldownTitle": "مؤشرات تفصيلية",
+        "drilldownSubtitle": "نظرة سريعة على أهم المؤشرات التشغيلية.",
+        "noDrilldown": "لا تتوفر تقارير تفصيلية لهذا القطاع بعد.",
+        "emailExport": "تنزيل قائمة البريد الإلكتروني",
+        "notificationExport": "تنزيل قائمة الإشعارات",
+        "360Title": "خريطة العلاقات 360°",
+        "360Subtitle": "أهم الاتصالات وكثافة التفاعل",
+        "noContacts": "لا توجد جهات مرتبطة بهذا القطاع بعد.",
+        "timelineTitle": "الخط الزمني للتواصل",
+        "timelineSubtitle": "التسلسل الزمني لأحدث التفاعلات",
+        "noTimeline": "لا توجد تفاعلات مسجلة مؤخرًا.",
+        "recommendationsTitle": "توصيات الحملات",
+        "recommendationsSubtitle": "أفضل الخطوات التالية لهذه الشريحة",
+        "noRecommendations": "لا توجد توصيات حالية لهذا القطاع.",
+        "audienceSize": "حجم الجمهور",
+        "nextAction": "الخطوة التالية",
+        "ownerLabel": "المسؤول",
+        "channel": {
+            "meeting": "اجتماع",
+            "call": "مكالمة",
+            "email": "بريد إلكتروني",
+            "event": "فعالية",
+            "deal": "صفقة",
+            "note": "ملاحظة"
         }
     }
 }
